alterações nos components book e conclusion

--- a/src/app/component/book/book.component.html
+++ b/src/app/component/book/book.component.html
@@ -11,21 +11,21 @@
           <ion-toolbar>
             <ion-title>Help</ion-title>
           </ion-toolbar>
-          <p>Sun</p>
-          <p>Moon</p>
-          <p></p>
-          <p></p>
-          <p></p>
+          <p>{{word1}}</p>
+          <p>{{word2}}</p>
+          <p>{{word3}}</p>
+          <p>{{word4}}</p>
+          <p>{{word5}}</p>
         </div>
         <div>
           <ion-toolbar>
             <ion-title>Ajuda</ion-title>
           </ion-toolbar>
-          <p>Sol</p>
-          <p>Lua</p>
-          <p></p>
-          <p></p>
-          <p></p>
+          <p>{{palavra1}}</p>
+          <p>{{palavra2}}</p>
+          <p>{{palavra3}}</p>
+          <p>{{palavra4}}</p>
+          <p>{{palavra5}}</p>
         </div>
       </div>
     </ion-content>
