--- a/src/app/component/conclusion/conclusion.component.html
+++ b/src/app/component/conclusion/conclusion.component.html
@@ -15,7 +15,7 @@
   <h2 id="pontuacao">Pontuação: {{ pontuacao }}</h2>
 </ion-label>
 
-<ion-label id="buttons" >
+<ion-label>
   <ion-button id="play-button" href="/level-selection"></ion-button>          
   <ion-button id="reset-button" (click)="refreshPage()"></ion-button>
 </ion-label>
