--- a/src/app/pages/middle-age-scenery/middle-age-scenery.page.html
+++ b/src/app/pages/middle-age-scenery/middle-age-scenery.page.html
@@ -1,22 +1,22 @@
 <ion-content>
   <app-interaction
     [style.display]="interactionVisible1 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Bem-vindo, viajante, ao reino de Vera Cruz. Nesse reino, ainda vivemos na era das espadas (sword) e castelos (castle), mas parece que desenvolvemos a magia! Novamente, parecem ter algum problema.'"
     [image]="'../../../assets/interactionAssets/interaction1.png'"
   ></app-interaction>
   <app-interaction
     [style.display]="interactionVisible2 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Saudações, viajante! Eu adoro dançar, mas meu irmão prefere ficar brincando com a espada dele, Ele é um chato, mas o rei é legal Vá falar ele.'"
     [image]="'../../../assets/interactionAssets/interaction1.png'"
   ></app-interaction>
   <app-interaction
     [style.display]="interactionVisible3 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Viajante, Eu sou o Rei, minha armadura (armor) está presa no castelo e com a chave (key) perdida a fechadura nunca abrirá. O Mago maligno está nos mantendo em refém, você poderia lidar com ele ? '"
     [image]="'../../../assets/interactionAssets/interaction2.png'"
   ></app-interaction>
   <app-interaction
     [style.display]="interactionVisible4 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Então parece que o Mago está impedindo que o rei abra a porta(Door) do castelo para pegar sua armadura mágica, Bom já sabemos como isso vai terminar.'"
     [image]="'../../../assets/interactionAssets/interaction3.png'"
   ></app-interaction>
   <app-interaction
