--- a/src/app/pages/prehistoric-scenery/prehistoric-scenery.page.html
+++ b/src/app/pages/prehistoric-scenery/prehistoric-scenery.page.html
@@ -1,22 +1,22 @@
 <ion-content>
   <app-interaction
     [style.display]="interactionVisible1 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Bem-vindo, viajante, A minha parte favorita desse planeta, Paleo Pines o único lugar com dinossauros(dinosaur) inteligentes ainda. Que tal achar um deles ?'"
     [image]="'../../../assets/interactionAssets/interaction1.png'"
   ></app-interaction>
   <app-interaction
     [style.display]="interactionVisible2 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Saudações, Viajante! Nunca vi um de vocês por aqui! Quer ser meu amigo ? Eu te dou uma pedra(Stone) todos gostam de pedra, exceto o meu irmão fala ali com ele! '"
     [image]="'../../../assets/interactionAssets/interaction1.png'"
   ></app-interaction>
   <app-interaction
     [style.display]="interactionVisible3 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Olá Viajante! Seria melhor ficar próximo da água(water) porque tem alguma coisa pegando fogo(fire) por aqui. Dá até vontade de fazer um churrasco!'"
     [image]="'../../../assets/interactionAssets/interaction2.png'"
   ></app-interaction>
   <app-interaction
     [style.display]="interactionVisible4 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Viajante apesar de um churrasco seria ótimo, estou vendo algo se movendo entre as árvores ali e pela cara não é algo bom Cuidado!'"
     [image]="'../../../assets/interactionAssets/interaction3.png'"
   ></app-interaction>
   <app-interaction
