--- a/src/app/pages/old-west-scenery/old-west-scenery.page.html
+++ b/src/app/pages/old-west-scenery/old-west-scenery.page.html
@@ -1,22 +1,22 @@
 <ion-content>
   <app-interaction
     [style.display]="interactionVisible1 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Bem-vindo, viajante! Juarez, aqui eles ainda vivem no estilo do Velho Oeste. Montados seus cavalos(horses) e caçando Bandidos!'"
     [image]="'../../../assets/interactionAssets/interaction1.png'"
   ></app-interaction>
   <app-interaction
     [style.display]="interactionVisible2 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Saudações Viajante! Espero que esteja bem, Eu sou a dona do salão(saloon) mas não posso fazer nada, por conta de um grande verme atacando a cidade, O Xerife(sheriff) pode te contar mais.'"
     [image]="'../../../assets/interactionAssets/interaction1.png'"
   ></app-interaction>
   <app-interaction
     [style.display]="interactionVisible3 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Viajante! Espero que você não tenha vindo a cavalo(horse) porque o verme tem fome deles, Meus homens estão feridos por conta dos bandidos(bandits) vagando então estamos precisando de ajuda!'"
     [image]="'../../../assets/interactionAssets/interaction2.png'"
   ></app-interaction>
   <app-interaction
     [style.display]="interactionVisible4 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
+    [message]="'Pelo jeito todos conhecem você Viajante, Nenhum verme é forte demais para nós e com sorte você pode ganhar um pouco de ouro(gold)!!'"
     [image]="'../../../assets/interactionAssets/interaction3.png'"
   ></app-interaction>
   <app-interaction
@@ -24,68 +24,74 @@
     [message]="'Tchau mundo'"
     [image]="'../../../assets/interactionAssets/interaction4.png'"
   ></app-interaction>
-  <app-choices
+<app-choices
     [style.display]="choicesVisible1 ? 'flex' : 'none'"
-    [escolha1]="'Sword'"
-    [escolha2]="'Space'"
-    [escolha3]="'Dark'"
-    [escolha4]="'Sun'"
-    [pergunta]="'Como se diz espada em inglês?'"
-    [respostaCorreta]="'A'"
-    [explicacao]="'Porque sword em inglês significa espada'"
-  ></app-choices>
-  <app-choices
+    [escolha1]="'Saloon'"
+    [escolha2]="'Bandit'"
+    [escolha3]="'Sheriff'"
+    [escolha4]="'Horse'"
+    [pergunta]="'Como se diz xerife em inglês?'"
+    [respostaCorreta]="'C'"
+    [explicacao]="'Porque sheriff em inglês significa xerife'"
+></app-choices>
+
+<app-choices
     [style.display]="choicesVisible2 ? 'flex' : 'none'"
-    [escolha1]="'Armor'"
-    [escolha2]="'Sword'"
-    [escolha3]="'Castle'"
-    [escolha4]="'Space'"
-    [pergunta]="'Como se diz armadura em inglês?'"
-    [respostaCorreta]="'A'"
-    [explicacao]="'Porque armor em inglês significa armadura'"
-  ></app-choices>
-  <app-choices
-    [style.display]="choicesVisible3 ? 'flex' : 'none'"
-    [escolha1]="'Three '"
-    [escolha2]="'Magic'"
-    [escolha3]="'Tree'"
-    [escolha4]="'Castle'"
-    [pergunta]="'Como se escreve castelo em inglês?'"
-    [respostaCorreta]="'D'"
-    [explicacao]="'Porque castle em inglês significa castelo'"
-  ></app-choices>
-  <app-choices
-    [style.display]="choicesVisible4 ? 'flex' : 'none'"
-    [escolha1]="'Open'"
-    [escolha2]="'Tree'"
-    [escolha3]="'Armor'"
-    [escolha4]="'Door'"
-    [pergunta]="'Como se escreve porta em inglês?'"
-    [respostaCorreta]="'D'"
-    [explicacao]="'Porque door em inglês significa porta'"
-  ></app-choices>
-  <app-choices
-    [style.display]="choicesVisible5 ? 'flex' : 'none'"
-    [escolha1]="'Castle'"
-    [escolha2]="'Key'"
-    [escolha3]="'Armor'"
-    [escolha4]="'Door'"
-    [pergunta]="'Como se escreve chave em inglês?'"
+    [escolha1]="'Sheriff'"
+    [escolha2]="'Gold'"
+    [escolha3]="'Bandit'"
+    [escolha4]="'Saloon'"
+    [pergunta]="'Como se diz ouro em inglês?'"
     [respostaCorreta]="'B'"
-    [explicacao]="'Porque key em inglês significa chave'"
-  ></app-choices>
-  <app-book
-    [palavra1]="'espada'"
-    [palavra2]="'armadura'"
-    [palavra3]="'castelo'"
-    [palavra4]="'porta'"
-    [palavra5]="'chave'"
-    [word1]="'sword'"
-    [word2]="'armor'"
-    [word3]="'castle'"
-    [word4]="'door'"
-    [word5]="'key'"
-  ></app-book>
+    [explicacao]="'Porque gold em inglês significa ouro'"
+></app-choices>
+
+<app-choices
+    [style.display]="choicesVisible3 ? 'flex' : 'none'"
+    [escolha1]="'Horse'"
+    [escolha2]="'Bandit'"
+    [escolha3]="'Sheriff'"
+    [escolha4]="'Saloon'"
+    [pergunta]="'Como se diz salão em inglês?'"
+    [respostaCorreta]="'D'"
+    [explicacao]="'Porque saloon em inglês significa salão'"
+></app-choices>
+
+<app-choices
+    [style.display]="choicesVisible4 ? 'flex' : 'none'"
+    [escolha1]="'Bandit'"
+    [escolha2]="'Horse'"
+    [escolha3]="'Gold'"
+    [escolha4]="'Sheriff'"
+    [pergunta]="'Como se diz bandido em inglês?'"
+    [respostaCorreta]="'A'"
+    [explicacao]="'Porque bandit em inglês significa bandido'"
+></app-choices>
+
+<app-choices
+    [style.display]="choicesVisible5 ? 'flex' : 'none'"
+    [escolha1]="'Bandit'"
+    [escolha2]="'Saloon'"
+    [escolha3]="'Sheriff'"
+    [escolha4]="'Horse'"
+    [pergunta]="'Como se diz cavalo em inglês?'"
+    [respostaCorreta]="'D'"
+    [explicacao]="'Porque horse em inglês significa cavalo'"
+></app-choices>
+
+<app-book
+    [palavra1]="'xerife'"
+    [palavra2]="'ouro'"
+    [palavra3]="'salão'"
+    [palavra4]="'bandido'"
+    [palavra5]="'cavalo'"
+    [word1]="'sheriff'"
+    [word2]="'gold'"
+    [word3]="'saloon'"
+    [word4]="'bandit'"
+    [word5]="'horse'"
+></app-book>
+
   <app-settings></app-settings>
   <app-conclusion *ngIf="todasPerguntasRespondidas()"></app-conclusion>
 </ion-content>
