--- a/src/app/pages/middle-age-scenery/middle-age-scenery.page.html
+++ b/src/app/pages/middle-age-scenery/middle-age-scenery.page.html
@@ -1,29 +1,34 @@
 <ion-content>
-  <app-interaction
-    [style.display]="interactionVisible1 ? 'flex' : 'none'"
-    [message]="'Bem-vindo, viajante, ao reino de Vera Cruz. Nesse reino, ainda vivemos na era das espadas (sword) e castelos (castle), mas parece que desenvolvemos a magia! Novamente, parecem ter algum problema.'"
-    [image]="'../../../assets/interactionAssets/interaction1.png'"
+  <app-interaction (click)="handleInteractionClick()"
+  [style.display]="interactionVisible2 ? 'flex' : 'none'"
+  [message]="'mas algo parece estar errado novamente com nossa recente descoberta da magia.'"
+  [image]="'../../../assets/interactionAssets/Wrong.png'"
   ></app-interaction>
   <app-interaction
-    [style.display]="interactionVisible2 ? 'flex' : 'none'"
-    [message]="'Saudações, viajante! Eu adoro dançar, mas meu irmão prefere ficar brincando com a espada dele, Ele é um chato, mas o rei é legal Vá falar ele.'"
-    [image]="'../../../assets/interactionAssets/interaction1.png'"
-  ></app-interaction>
-  <app-interaction
-    [style.display]="interactionVisible3 ? 'flex' : 'none'"
-    [message]="'Viajante, Eu sou o Rei, minha armadura (armor) está presa no castelo e com a chave (key) perdida a fechadura nunca abrirá. O Mago maligno está nos mantendo em refém, você poderia lidar com ele ? '"
-    [image]="'../../../assets/interactionAssets/interaction2.png'"
-  ></app-interaction>
-  <app-interaction
-    [style.display]="interactionVisible4 ? 'flex' : 'none'"
-    [message]="'Então parece que o Mago está impedindo que o rei abra a porta(Door) do castelo para pegar sua armadura mágica, Bom já sabemos como isso vai terminar.'"
-    [image]="'../../../assets/interactionAssets/interaction3.png'"
-  ></app-interaction>
-  <app-interaction
-    [style.display]="interactionVisible5 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
-    [image]="'../../../assets/interactionAssets/interaction4.png'"
-  ></app-interaction>
+  [style.display]="interactionVisible1 ? 'flex' : 'none'"
+  [message]="'Seja bem-vindo ao reino de Vera Cruz, viajante! Aqui, estamos na época das espadas(swords) e castelos(castles).'"
+  [image]="'../../../assets/interactionAssets/Right.png'"
+></app-interaction>
+<app-interaction (click)="handleInteractionClick()"
+  [style.display]="interactionVisible4 ? 'flex' : 'none'"
+  [message]="'Viajante, Eu sou o Rei. minha armadura (armor) está presa no castelo, e como a chave (key) perdida a fechadura nunca abrirá. '"
+  [image]="'../../../assets/interactionAssets/interaction2.png'"
+></app-interaction>
+<app-interaction
+  [style.display]="interactionVisible3 ? 'flex' : 'none'"
+  [message]="'Saudações, viajante! Eu adoro dançar, mas meu irmão prefere ficar brincando com a espada dele, Ele é um chato, mas o rei é legal Vá falar com ele.'"
+  [image]="'../../../assets/interactionAssets/interaction1.png'"
+></app-interaction>
+<app-interaction
+[style.display]="interactionVisible5 ? 'flex' : 'none'"
+[message]="'O Mago maligno está nos mantendo em refém, você poderia lidar com ele ? '"
+[image]="'../../../assets/interactionAssets/interaction3.png'"
+></app-interaction>
+<app-interaction (click)="handleInteractionClick()"
+  [style.display]="interactionVisible6 ? 'flex' : 'none'"
+  [message]="'Então parece que o Mago está impedindo que o rei abra a porta(Door) do castelo para pegar sua armadura mágica, bom já sabemos como isso vai terminar.'"
+  [image]="'../../../assets/interactionAssets/interaction4.png'"
+></app-interaction>
   <app-choices
     [style.display]="choicesVisible1 ? 'flex' : 'none'"
     [escolha1]="'Sword'"
