tratamento de erro

--- a/src/app/pages/level-selection/level-selection.page.html
+++ b/src/app/pages/level-selection/level-selection.page.html
@@ -34,7 +34,7 @@
         <ion-card href="/pirates-scenery" class="level-card">
           <img src="assets/level-selectionPageAssets/island.png" alt="Level 3" class="level-image">
           <ion-card-content>
-            <ion-card-title>Monkey Island</ion-card-title>
+            <ion-card-title>Treasure Island</ion-card-title>
             <p class="level-description">Em uma ilha remota, uma trupe de piratas desencadeou uma maldição ao encontrar um tesouro.</p>
           </ion-card-content>
         </ion-card>
