--- a/src/app/pages/middle-age-scenery/middle-age-scenery.page.html
+++ b/src/app/pages/middle-age-scenery/middle-age-scenery.page.html
@@ -1,35 +1,40 @@
 <ion-content>
-  <app-interaction (click)="handleInteractionClick()"
-  [style.display]="interactionVisible2 ? 'flex' : 'none'"
-  [message]="'mas algo parece estar errado novamente com nossa recente descoberta da magia.'"
-  [image]="'../../../assets/interactionAssets/Wrong.png'"
-  ></app-interaction>
-  <app-interaction
-  [style.display]="interactionVisible1 ? 'flex' : 'none'"
-  [message]="'Seja bem-vindo ao reino de Vera Cruz, viajante! Aqui, estamos na época das espadas(swords) e castelos(castles).'"
-  [image]="'../../../assets/interactionAssets/Right.png'"
-></app-interaction>
-<app-interaction (click)="handleInteractionClick()"
-  [style.display]="interactionVisible4 ? 'flex' : 'none'"
-  [message]="'Viajante, Eu sou o Rei. minha armadura (armor) está presa no castelo, e como a chave (key) perdida a fechadura nunca abrirá. '"
-  [image]="'../../../assets/interactionAssets/interaction2.png'"
-></app-interaction>
-<app-interaction
-  [style.display]="interactionVisible3 ? 'flex' : 'none'"
-  [message]="'Saudações, viajante! Eu adoro dançar, mas meu irmão prefere ficar brincando com a espada dele, Ele é um chato, mas o rei é legal Vá falar com ele.'"
-  [image]="'../../../assets/interactionAssets/interaction1.png'"
-></app-interaction>
-<app-interaction
-[style.display]="interactionVisible5 ? 'flex' : 'none'"
-[message]="'O Mago maligno está nos mantendo em refém, você poderia lidar com ele ? '"
-[image]="'../../../assets/interactionAssets/interaction3.png'"
-></app-interaction>
-<app-interaction (click)="handleInteractionClick()"
+  <app-interaction  (click)="handleInteractionClick()"
   [style.display]="interactionVisible6 ? 'flex' : 'none'"
   [message]="'Então parece que o Mago está impedindo que o rei abra a porta(Door) do castelo para pegar sua armadura mágica, bom já sabemos como isso vai terminar.'"
   [image]="'../../../assets/interactionAssets/interaction4.png'"
 ></app-interaction>
-  <app-choices
+
+<app-interaction  (click)="handleInteractionClick()"
+  [style.display]="interactionVisible5 ? 'flex' : 'none'"
+  [message]="'O Mago maligno está nos mantendo em refém, você poderia lidar com ele?'"
+  [image]="'../../../assets/interactionAssets/interaction3.png'"
+></app-interaction>
+
+<app-interaction  
+  [style.display]="interactionVisible4 ? 'flex' : 'none'"
+  [message]="'Viajante, Eu sou o Rei. Minha armadura (armor) está presa no castelo, e como a chave (key) está perdida, a fechadura nunca abrirá.-'"
+  [image]="'../../../assets/interactionAssets/interaction2.png'"
+></app-interaction>
+
+<app-interaction  (click)="handleInteractionClick()"
+  [style.display]="interactionVisible3 ? 'flex' : 'none'"
+  [message]="'Saudações, viajante! Eu adoro dançar, mas meu irmão prefere ficar brincando com a espada dele, Ele é um chato, mas o rei é legal. Vá falar com ele.'"
+  [image]="'../../../assets/interactionAssets/interaction1.png'"
+></app-interaction>
+
+<app-interaction 
+  [style.display]="interactionVisible2 ? 'flex' : 'none'"
+  [message]="'mas algo parece estar errado novamente com nossa recente descoberta da magia.'"
+  [image]="'../../../assets/interactionAssets/Wrong.png'"
+></app-interaction>
+
+<app-interaction
+  [style.display]="interactionVisible1 ? 'flex' : 'none'"
+  [message]="'Seja bem-vindo ao reino de Vera Cruz, viajante! Aqui, estamos na época das espadas(swords) e castelos(castles).-'"
+  [image]="'../../../assets/interactionAssets/Right.png'"
+></app-interaction>
+  <app-choices (click)="handleInteractionClick()"
     [style.display]="choicesVisible1 ? 'flex' : 'none'"
     [escolha1]="'Sword'"
     [escolha2]="'Space'"
@@ -39,7 +44,7 @@
     [respostaCorreta]="'A'"
     [explicacao]="'Porque sword em inglês significa espada'"
   ></app-choices>
-  <app-choices
+  <app-choices (click)="handleInteractionClick()"
     [style.display]="choicesVisible2 ? 'flex' : 'none'"
     [escolha1]="'Armor'"
     [escolha2]="'Sword'"
@@ -49,7 +54,7 @@
     [respostaCorreta]="'A'"
     [explicacao]="'Porque armor em inglês significa armadura'"
   ></app-choices>
-  <app-choices
+  <app-choices (click)="handleInteractionClick()"
     [style.display]="choicesVisible3 ? 'flex' : 'none'"
     [escolha1]="'Three '"
     [escolha2]="'Magic'"
@@ -59,7 +64,7 @@
     [respostaCorreta]="'D'"
     [explicacao]="'Porque castle em inglês significa castelo'"
   ></app-choices>
-  <app-choices
+  <app-choices (click)="handleInteractionClick()"
     [style.display]="choicesVisible4 ? 'flex' : 'none'"
     [escolha1]="'Open'"
     [escolha2]="'Tree'"
@@ -69,7 +74,7 @@
     [respostaCorreta]="'D'"
     [explicacao]="'Porque door em inglês significa porta'"
   ></app-choices>
-  <app-choices
+  <app-choices (click)="handleInteractionClick()"
     [style.display]="choicesVisible5 ? 'flex' : 'none'"
     [escolha1]="'Castle'"
     [escolha2]="'Key'"
