--- a/src/app/pages/pirates-scenery/pirates-scenery.page.html
+++ b/src/app/pages/pirates-scenery/pirates-scenery.page.html
@@ -1,29 +1,39 @@
 <ion-content>
-  <app-interaction
-    [style.display]="interactionVisible1 ? 'flex' : 'none'"
-    [message]="'Bem-vindo, viajante, à misteriosa Monkey Island. Parece que algo extraordinário aconteceu, no meio do oceano (Ocean) alguém pelo jeito descobriu um tesouro, Vamos perguntar mais.'"
-    [image]="'../../../assets/interactionAssets/interaction1.png'"
-  ></app-interaction>
-  <app-interaction
-    [style.display]="interactionVisible2 ? 'flex' : 'none'"
-    [message]="'Saudações, forasteiro! Ouvi dizer que você está interessado no tesouro. Não posso lhe contar muito, mas minha amiga estava a bordo do navio(Ship) então melhor perguntar a ela!'"
-    [image]="'../../../assets/interactionAssets/interaction1.png'"
-  ></app-interaction>
-  <app-interaction
-    [style.display]="interactionVisible3 ? 'flex' : 'none'"
-    [message]="'Ahoy, viajante! Eu sou a Capitã (captain) pirata(Pirate) que encontrou o tesouro lendário.  Mas ele guarda uma grande maldição que está me caçando, Você viajante é bem forte poderia me ajudar?'"
-    [image]="'../../../assets/interactionAssets/interaction2.png'"
-  ></app-interaction>
-  <app-interaction
-    [style.display]="interactionVisible4 ? 'flex' : 'none'"
-    [message]="'Pelo jeito todos conhecem você Viajante, Nenhuma maldição é forte demais para nós mas por via das dúvidas cuidado com a espada(Sword) dele.'"
-    [image]="'../../../assets/interactionAssets/interaction3.png'"
-  ></app-interaction>
-  <app-interaction
+<app-interaction (click)="handleInteractionClick()"
+   [style.display]="interactionVisible7 ? 'flex' : 'none'"
+   [message]="'Pelo jeito todos conhecem você Viajante, Nenhuma maldição é forte demais para nós mas por via das dúvidas cuidado com a espada(Sword) dele.'"
+   [image]="'../../../assets/interactionAssets/interaction4.png'"
+></app-interaction>
+<app-interaction (click)="handleInteractionClick()"
+   [style.display]="interactionVisible6 ? 'flex' : 'none'"
+   [message]="'Mas ele guarda uma grande maldição que está me caçando, Você viajante é bem forte poderia me ajudar?'"
+   [image]="'../../../assets/interactionAssets/interaction4.png'"
+></app-interaction>
+<app-interaction
     [style.display]="interactionVisible5 ? 'flex' : 'none'"
-    [message]="'Tchau mundo'"
-    [image]="'../../../assets/interactionAssets/interaction4.png'"
-  ></app-interaction>
+    [message]="'Ahoy, viajante! Eu sou a Capitã (captain) pirata(Pirate) que encontrou o tesouro lendário.'"
+    [image]="'../../../assets/interactionAssets/interaction3.png'"
+></app-interaction>
+<app-interaction (click)="handleInteractionClick()"
+    [style.display]="interactionVisible4 ? 'flex' : 'none'"
+    [message]="'mas minha amiga estava a bordo do navio(Ship) então melhor perguntar a ela!'"
+    [image]="'../../../assets/interactionAssets/interaction2.png'"
+></app-interaction>
+<app-interaction
+    [style.display]="interactionVisible3 ? 'flex' : 'none'"
+    [message]="'Saudações, forasteiro! Ouvi dizer que você está interessado no tesouro. Não posso lhe contar muito,-'"
+    [image]="'../../../assets/interactionAssets/interaction1.png'"
+></app-interaction>
+<app-interaction
+   [style.display]="interactionVisible2 ? 'flex' : 'none'"
+   [message]="'no meio do oceano (Ocean) alguém pelo jeito descobriu um tesouro, Vamos perguntar mais.'"
+   [image]="'../../../assets/interactionAssets/interaction4.png'"
+></app-interaction>
+<app-interaction
+    [style.display]="interactionVisible1 ? 'flex' : 'none'"
+    [message]="'Bem-vindo, viajante, à misteriosa Treasure Island. Parece que algo extraordinário aconteceu,-'"
+    [image]="'../../../assets/interactionAssets/interaction1.png'"
+></app-interaction>
   <app-choices
     [style.display]="choicesVisible1 ? 'flex' : 'none'"
     [escolha1]="'Ocean'"
